CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Start defining the project
PROJECT (NUTTCP_GPU)

# Set version numbers
SET(NUTTCP_GPU_MAJOR_VERSION 1)
SET(NUTTCP_GPU_MINOR_VERSION 0)
SET(NUTTCP_GPU_VERSION "${NUTTCP_GPU_MAJOR_VERSION}.${NUTTCP_GPU_MINOR_VERSION}")

# Set cmake module path
SET(CMAKE_MODULE_PATH "${NUTTCP_GPU_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

IF(NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
MAKE_DIRECTORY(${OUTPUT_BINDIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})

FIND_PACKAGE(Verbs)
FIND_PACKAGE(RDMAcm)

SET(NUTTCP_GPU_SRC
    nuttcp-7.2.1.c
    )

INCLUDE_DIRECTORIES(${VERBS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RDMA_CM_INCLUDE_DIR})

ADD_EXECUTABLE(nuttcp-gpu ${NUTTCP_GPU_SRC})
TARGET_LINK_LIBRARIES(nuttcp-gpu ${VERBS_LIBRARY})
TARGET_LINK_LIBRARIES(nuttcp-gpu ${RDMA_CM_LIBRARY})

INSTALL(TARGETS nuttcp-gpu DESTINATION bin)
